<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/displayTV"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/username_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/dis_username_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:textSize="15sp"
                android:text="@string/user_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/emailTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_email"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/dis_emailTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="138dp"
                android:textSize="15sp"
                android:text="@string/user_email" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/phone_number_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_ph"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dis_phone_number_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="66dp"
                android:textSize="15sp"
                android:text="@string/user_ph" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pin_code_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_pin_code"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dis_pin_code_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="115dp"
                android:textSize="15sp"
                android:text="@string/user_pin_code" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/address_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_address"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dis_address_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="119dp"
                android:textSize="15sp"
                android:text="@string/user_address" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/confirm_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/confirm_button" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="80dp"
                android:text="@string/cancel_button" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>